added fans and creators sites

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <div class="left"  onmouseover="focusLeftItem()" onmouseout="unFocusLeftItem()" ></div>
                     <div class="right"  onmouseover="focusRightItem()" onmouseout="unFocusRightItem()" ></div>
                     <div class="inner-circle">DEMU</div>
-                    <p id="left_text" class="left-text" >FANS</p>
-                    <p id="right_text" class="right-text" >CREATORS</p>
+                    <a id="left_text" class="left-text" href="">FANS</p>
+                    <a id="right_text" class="right-text" href="">CREATORS</p>
                     
                 </div>
                 
