fixed scroll-bar issues

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <!--hero header-->
 <section class="py-7 py-md-0 bg-hero" id="home">
-    <div class="">
+    <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center"> 
                 <div class="circle">
