--- a/creators.html
+++ b/creators.html
@@ -4,9 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Knight - Free Bootstrap 4 Product Landing Page Template</title>
+    <title>Demu - Decentralized Music Streaming</title>
     <meta name="description"
-          content="Knight is a beautiful Bootstrap 4 template for product landing pages."/>
+          content="Decentralized music streaming network shifting power to artists."/>
 
     <!--Inter UI font-->
     <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
@@ -26,7 +26,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand heading-black" href="index.html">
-                Knight
+                DEMU
             </a>
             <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
                     data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
@@ -50,7 +50,7 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="#">
                             <em data-feather="layout" width="18" height="18" class="mr-2"></em>
-                            Try Generator
+                            GET STARTED NOW
                         </a>
                     </li>
                 </ul>
@@ -64,9 +64,8 @@
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-                <h1 class="heading-black text-capitalize">Quickly build landing pages with Knight</h1>
-                <p class="lead py-3">Knight is a platform that helps freelancers and companies build beautiful landing
-                    pages in minutes. Sign up for free.</p>
+                <h1 class="heading-black text-capitalize">Your Own Music, Your Way</h1>
+                <p class="lead py-3">Demu is a new music economy, where the artists and creatives make money. It's a fair and balanced system where each and every artist gets their well-deserved share of the pie.</p>
                 <button class="btn btn-primary d-inline-flex flex-row align-items-center">
                     Get started now
                     <em class="ml-2" data-feather="arrow-right"></em>
@@ -132,25 +131,62 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-6">
-            <div class="col-md-6 mr-auto">
-                <h2>Knight is more than just a page builder.</h2>
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum mattis, turpis purus placerat eros.</p>
-                <a href="#" class="btn btn-light">
-                    Try the live demo
-                </a>
-            </div>
-            <div class="col-md-5">
-                <div class="slick-about">
-                    <img src="img/blog-1.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 1"/>
-                    <img src="img/blog-2.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 2"/>
-                    <img src="img/blog-3.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 3"/>
-                </div>
-            </div>
-        </div>
     </div>
 </section>
 
+<!--footer-->
+<footer class="py-6">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 mr-auto">
+                <h5>About Knight</h5>
+                <p class="text-muted">Magnis modipsae que voloratati andigen daepeditem quiate conecus aut labore.
+                    Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam explabo.</p>
+                <ul class="list-inline social social-sm">
+                    <li class="list-inline-item">
+                        <a href=""><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href=""><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href=""><i class="fa fa-google-plus"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href=""><i class="fa fa-dribbble"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-2">
+                <h5>Legal</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Refund policy</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-2">
+                <h5>Partner</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">Refer a friend</a></li>
+                    <li><a href="#">Affiliates</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-2">
+                <h5>Help</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Log in</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-12 text-muted text-center small-xl">
+                &copy; 2019 Knight - All Rights Reserved
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 <!--scroll to top-->
