--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Demu - Decentralized Music Streaming</title>
     <meta name="description"
-          content="Knight is a beautiful Bootstrap 4 template for product landing pages."/>
+          content="Decentralized music streaming network shifting power to artists."/>
 
     <!--Inter UI font-->
     <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
@@ -79,59 +79,7 @@
     </div>
 </section>
 
-<!--footer-->
-<footer class="py-6">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-5 mr-auto">
-                <h5>About Knight</h5>
-                <p class="text-muted">Magnis modipsae que voloratati andigen daepeditem quiate conecus aut labore.
-                    Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam explabo.</p>
-                <ul class="list-inline social social-sm">
-                    <li class="list-inline-item">
-                        <a href=""><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href=""><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href=""><i class="fa fa-google-plus"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href=""><i class="fa fa-dribbble"></i></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-2">
-                <h5>Legal</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Terms</a></li>
-                    <li><a href="#">Refund policy</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-2">
-                <h5>Partner</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#">Refer a friend</a></li>
-                    <li><a href="#">Affiliates</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-2">
-                <h5>Help</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Log in</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row mt-5">
-            <div class="col-12 text-muted text-center small-xl">
-                &copy; 2019 Knight - All Rights Reserved
-            </div>
-        </div>
-    </div>
-</footer>
+
 
 <!--scroll to top-->
 <div class="scroll-top">
