changed text to reflect our app

--- a/fans.html
+++ b/fans.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Knight - Free Bootstrap 4 Product Landing Page Template</title>
+    <title>Demu - Decentralized Music Streaming</title>
     <meta name="description"
           content="Knight is a beautiful Bootstrap 4 template for product landing pages."/>
 
@@ -26,7 +26,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand heading-black" href="index.html">
-                Knight
+                DEMU
             </a>
             <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
                     data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
@@ -50,7 +50,7 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="#">
                             <em data-feather="layout" width="18" height="18" class="mr-2"></em>
-                            Try Generator
+                            Try our app
                         </a>
                     </li>
                 </ul>
@@ -64,9 +64,9 @@
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-                <h1 class="heading-black text-capitalize">Quickly build landing pages with Knight</h1>
-                <p class="lead py-3">Knight is a platform that helps freelancers and companies build beautiful landing
-                    pages in minutes. Sign up for free.</p>
+                <h1 class="heading-black text-capitalize">The Music you Love, on your terms</h1>
+                <p class="lead py-3">Demu is the new music streaming platform that gives back to the artists. 
+                    By listening to music you directly help your favourite creators.</p>
                 <button class="btn btn-primary d-inline-flex flex-row align-items-center">
                     Get started now
                     <em class="ml-2" data-feather="arrow-right"></em>
@@ -81,9 +81,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
-                <h2 class="heading-black">Knight offers everything you need.</h2>
-                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in nisi
-                    commodo, tempus odio a, vestibulum nibh.</p>
+                <h2 class="heading-black">Our mission: Brining creators and fans closer</h2>
+                <p class="text-muted lead">DEMU makes it possible for fans to support their favorite artists in ways which were not previously possible. </p>
             </div>
         </div>
         <div class="row mt-5">
@@ -95,9 +94,8 @@
                                 <span data-feather="edit-3" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Create once. Share everywhere.</h5>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in
-                            nisi commodo, tempus odio a, vestibulum nibh.</p>
+                        <h5>Your favourite creators get paid more</h5>
+                        <p class="text-muted">Your subscription fee is directly given to the artists based on your listening history.</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-success">
@@ -105,9 +103,8 @@
                                 <span data-feather="monitor" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Unlimited devices</h5>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in
-                            nisi commodo, tempus odio a, vestibulum nibh.</p>
+                        <h5>Invest in artists thanks by buying their tokens</h5>
+                        <p class="text-muted">DEMU offers users the possibility to mint and exchange creator tokens</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-danger">
@@ -115,9 +112,8 @@
                                 <span data-feather="layout" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Beautiful tempates & layouts</h5>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in
-                            nisi commodo, tempus odio a, vestibulum nibh.</p>
+                        <h5>Buy Merchandise and NFTs directly from the artists</h5>
+                        <p class="text-muted">Our platform allows creators to create NFTs and bind them to real objects like albums, CD and more</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-info">
