--- a/creators.html
+++ b/creators.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Knight - Free Bootstrap 4 Product Landing Page Template</title>
+    <title>Demu - Decentralized Music Streaming</title>
     <meta name="description"
           content="Knight is a beautiful Bootstrap 4 template for product landing pages."/>
 
@@ -26,7 +26,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand heading-black" href="index.html">
-                Knight
+                DEMU
             </a>
             <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
                     data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
@@ -64,9 +64,9 @@
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-                <h1 class="heading-black text-capitalize">Quickly build landing pages with Knight</h1>
-                <p class="lead py-3">Knight is a platform that helps freelancers and companies build beautiful landing
-                    pages in minutes. Sign up for free.</p>
+                <h1 class="heading-black text-capitalize">Your music. Your way  </h1>
+                <p class="lead py-3">A decentralized music streaming platform that leverages the potential of blockchain technology to give artists and 
+                    and music lovers the best experience in the ecosystem.</p>
                 <button class="btn btn-primary d-inline-flex flex-row align-items-center">
                     Get started now
                     <em class="ml-2" data-feather="arrow-right"></em>
