--- a/fans.html
+++ b/fans.html
@@ -81,7 +81,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
-                <h2 class="heading-black">Our mission: Brining creators and fans closer</h2>
+                <h2 class="heading-black">Our mission: Bringing creators and fans closer</h2>
                 <p class="text-muted lead">DEMU makes it possible for fans to support their favorite artists in ways which were not previously possible. </p>
             </div>
         </div>
@@ -121,9 +121,8 @@
                                 <span data-feather="globe" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Available globally</h5>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in
-                            nisi commodo, tempus odio a, vestibulum nibh.</p>
+                        <h5>Finding new arists has never been simpler</h5>
+                        <p class="text-muted">Thanks to our discovery feature, you can find new artists that best represent your tastes</p>
                     </div>
                 </div>
             </div>
