Changed creator page

--- a/creators.html
+++ b/creators.html
@@ -81,9 +81,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
-                <h2 class="heading-black">Knight offers everything you need.</h2>
-                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in nisi
-                    commodo, tempus odio a, vestibulum nibh.</p>
+                <h2 class="heading-black">Bringing creators and fans closer</h2>
+                <p class="text-muted lead">DEMU makes it possible for fans to support their favorite artists in ways which were not previously possible. </p>
             </div>
         </div>
         <div class="row mt-5">
@@ -95,9 +94,8 @@
                                 <span data-feather="edit-3" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Create once. Share everywhere.</h5>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in
-                            nisi commodo, tempus odio a, vestibulum nibh.</p>
+                        <h5>You get your fair share</h5>
+                        <p class="text-muted">The listeners subscription fee is given directly to the artists based on their listening history.</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-success">
@@ -105,9 +103,8 @@
                                 <span data-feather="monitor" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Unlimited devices</h5>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in
-                            nisi commodo, tempus odio a, vestibulum nibh.</p>
+                        <h5>Stay independent, using your own token</h5>
+                        <p class="text-muted">On DEMU, artists can raise money by creating their own "creator"-tokens. Use this to stay independent.</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-danger">
@@ -115,9 +112,8 @@
                                 <span data-feather="layout" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Beautiful tempates & layouts</h5>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in
-                            nisi commodo, tempus odio a, vestibulum nibh.</p>
+                        <h5>Create & sell your own NFTs</h5>
+                        <p class="text-muted">Our platform allows creators to create NFTs and bind them to real objects like albums, CD and more.</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-info">
@@ -125,9 +121,8 @@
                                 <span data-feather="globe" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Available globally</h5>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in
-                            nisi commodo, tempus odio a, vestibulum nibh.</p>
+                        <h5>Get discovered</h5>
+                        <p class="text-muted">On DEMU, small creators can build an audience through our discovery features. Getting discovered has never been easier.</p>
                     </div>
                 </div>
             </div>
