--- a/creators.html
+++ b/creators.html
@@ -41,18 +41,6 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#pricing">Pricing</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#faq">FAQ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="#">
-                            <em data-feather="layout" width="18" height="18" class="mr-2"></em>
-                            GET STARTED NOW
-                        </a>
-                    </li>
                 </ul>
             </div>
         </nav>
@@ -67,10 +55,21 @@
                 <h1 class="heading-black text-capitalize">Your music. Your way  </h1>
                 <p class="lead py-3">A decentralized music streaming platform that leverages the potential of blockchain technology to give artists and
                     and music lovers the best experience in the ecosystem.</p>
-                <button class="btn btn-primary d-inline-flex flex-row align-items-center">
-                    Get started now
-                    <em class="ml-2" data-feather="arrow-right"></em>
-                </button>
+                <!-- Begin Mailchimp Signup Form -->
+                <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+                <div id="mc_embed_signup">
+                    <form action="https://hcfm.us5.list-manage.com/subscribe/post?u=634bf8d4b16b8e6e779f83e08&amp;id=6c5b70e22a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
+                        <div id="mc_embed_signup_scroll">
+                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_634bf8d4b16b8e6e779f83e08_6c5b70e22a" tabindex="-1" value=""></div>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="button"></div>
+                        </div>
+                    </form>
+                </div>
+
+                <!--End mc_embed_signup-->
             </div>
         </div>
     </div>
@@ -129,15 +128,24 @@
         </div>
     </div>
 </section>
+<section class="py-7 bg-dark section-angle top-right bottom-right" id="pricing">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 mx-auto text-center">
+                <h2 class="heading-black">Free for creators. Forever.</h2>
+                <p class="text-muted lead">Demu will never charge artist to upload their own work on the platform.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!--footer-->
 <footer class="py-6">
     <div class="container">
         <div class="row">
             <div class="col-sm-5 mr-auto">
-                <h5>About Knight</h5>
-                <p class="text-muted">Magnis modipsae que voloratati andigen daepeditem quiate conecus aut labore.
-                    Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam explabo.</p>
+                <h5>About Demu</h5>
+                <p class="text-muted">Demu is a decentralized music streaming platform that is shifting power to the creators. Join the 1000s of artists and listeners using Demu.</p>
                 <ul class="list-inline social social-sm">
                     <li class="list-inline-item">
                         <a href=""><i class="fa fa-facebook"></i></a>
@@ -178,7 +186,7 @@
         </div>
         <div class="row mt-5">
             <div class="col-12 text-muted text-center small-xl">
-                &copy; 2019 Knight - All Rights Reserved
+                &copy; 2021 Demu - All Rights Reserved
             </div>
         </div>
     </div>
