--- a/creators.html
+++ b/creators.html
@@ -63,7 +63,7 @@
                         <div id="mc_embed_signup_scroll">
                             <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_634bf8d4b16b8e6e779f83e08_6c5b70e22a" tabindex="-1" value=""></div>
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_634bf8d4b16b8e6e779f83e08_6c5b70e22a" id="email_signup_input" tabindex="-1" value=""></div>
                             <div class="clear"><input type="submit" value="Subscribe" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="button"></div>
                         </div>
                     </form>
