--- a/creators.html
+++ b/creators.html
@@ -61,10 +61,8 @@
                 <div id="mc_embed_signup">
                     <form action="https://hcfm.us5.list-manage.com/subscribe/post?u=634bf8d4b16b8e6e779f83e08&amp;id=6c5b70e22a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
                         <div id="mc_embed_signup_scroll">
-                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_634bf8d4b16b8e6e779f83e08_6c5b70e22a" id="email_signup_input" tabindex="-1" value=""></div>
-                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="button"></div>
+                            <input style="padding: 20px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email" required>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center"></div>
                         </div>
                     </form>
                 </div>
