Fixed Email and added to fans

--- a/fans.html
+++ b/fans.html
@@ -65,12 +65,19 @@
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
                 <h1 class="heading-black text-capitalize">The Music you Love, on your terms</h1>
-                <p class="lead py-3">Demu is the new music streaming platform that gives back to the artists. 
+                <p class="lead py-3">Demu is the new music streaming platform that gives back to the artists.
                     By listening to music you directly help your favourite creators.</p>
-                <button class="btn btn-primary d-inline-flex flex-row align-items-center">
-                    Get started now
-                    <em class="ml-2" data-feather="arrow-right"></em>
-                </button>
+                <!-- Begin Mailchimp Signup Form -->
+                <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+                <div id="mc_embed_signup">
+                    <form action="https://hcfm.us5.list-manage.com/subscribe/post?u=634bf8d4b16b8e6e779f83e08&amp;id=6c5b70e22a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
+                        <div id="mc_embed_signup_scroll">
+                            <input style="padding: 20px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email-Address" required>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center"></div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
