--- a/creators.html
+++ b/creators.html
@@ -61,13 +61,11 @@
                 <div id="mc_embed_signup">
                     <form action="https://hcfm.us5.list-manage.com/subscribe/post?u=634bf8d4b16b8e6e779f83e08&amp;id=6c5b70e22a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
                         <div id="mc_embed_signup_scroll">
-                            <input style="padding: 20px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email" required>
+                            <input style="padding: 20px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email-Address" required>
                             <div class="clear"><input type="submit" value="Subscribe" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center"></div>
                         </div>
                     </form>
                 </div>
-
-                <!--End mc_embed_signup-->
             </div>
         </div>
     </div>
