--- a/fans.html
+++ b/fans.html
@@ -110,7 +110,7 @@
                                 <span data-feather="monitor" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Invest in artists thanks by buying their tokens</h5>
+                        <h5>Invest in artists by buying their tokens</h5>
                         <p class="text-muted">DEMU offers users the possibility to mint and exchange creator tokens</p>
                     </div>
                     <div class="col-md-6 box">
@@ -128,7 +128,7 @@
                                 <span data-feather="globe" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Finding new arists has never been simpler</h5>
+                        <h5>Finding new artists has never been simpler</h5>
                         <p class="text-muted">Thanks to our discovery feature, you can find new artists that best represent your tastes</p>
                     </div>
                 </div>
