added context to fans page

--- a/fans.html
+++ b/fans.html
@@ -173,8 +173,8 @@
                             <ul class="list-unstyled pricing-list">
                                 <li>Access to NFT-features</li>
                                 <li>Support for video and podcast hosting</li>
-                                <li>advanced parameters for the discovery feature</li>
-                                <li style="color:transparent">""</li>
+                                <li>advanced discovery search</li>
+
                             </ul>
                             <a href="#" class="btn btn-info">
                                 work in progress
@@ -187,13 +187,14 @@
                             <h2 class="card-title text-primary mb-0 pt-4">$9.99</h2>
                             <div class="text-muted font-weight-medium mt-2">per month</div>
                             <ul class="list-unstyled pricing-list">
+                                <li>Artist analytics and other tools</li>
                                 <li>more unannounced features</li>
                                 <li style="color:transparent">""</li>
                                 <li style="color:transparent">""</li>
-                                <li style="color:transparent">"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"</li>
+
                             </ul>
                             <a href="#" class="btn btn-primary">
-                                to be announced
+                                WORK IN PROGRESS
                             </a>
                         </div>
                     </div>
@@ -218,9 +219,10 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-5 mr-auto">
-                <h5>About Knight</h5>
-                <p class="text-muted">Magnis modipsae que voloratati andigen daepeditem quiate conecus aut labore.
-                    Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam explabo.</p>
+                <h5>About DEMU</h5>
+                <p class="text-muted">DEMU is a decentralized music streaming platform where the your subscription fee is distributed to artists based on your streaming history.
+                
+                </p>
                 <ul class="list-inline social social-sm">
                     <li class="list-inline-item">
                         <a href=""><i class="fa fa-facebook"></i></a>
@@ -241,21 +243,20 @@
                 <ul class="list-unstyled">
                     <li><a href="#">Privacy</a></li>
                     <li><a href="#">Terms</a></li>
-                    <li><a href="#">Refund policy</a></li>
+
                 </ul>
             </div>
             <div class="col-sm-2">
-                <h5>Partner</h5>
+                <h5>Partners</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#">Refer a friend</a></li>
-                    <li><a href="#">Affiliates</a></li>
+                    <li><a href="#">labels</a></li>
+                    <li><a href="#">artists</a></li>
                 </ul>
             </div>
             <div class="col-sm-2">
                 <h5>Help</h5>
                 <ul class="list-unstyled">
                     <li><a href="#">Support</a></li>
-                    <li><a href="#">Log in</a></li>
                 </ul>
             </div>
         </div>
