--- a/creators.html
+++ b/creators.html
@@ -144,16 +144,10 @@
                 <p class="text-muted">Demu is a decentralized music streaming platform that is shifting power to the creators. Join the 1000s of artists and listeners using Demu.</p>
                 <ul class="list-inline social social-sm">
                     <li class="list-inline-item">
-                        <a href=""><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/demu_app/"><i class="fa fa-instagram"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href=""><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href=""><i class="fa fa-google-plus"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href=""><i class="fa fa-dribbble"></i></a>
+                        <a href="https://twitter.com/DemuApp"><i class="fa fa-twitter"></i></a>
                     </li>
                 </ul>
             </div>
@@ -162,21 +156,19 @@
                 <ul class="list-unstyled">
                     <li><a href="#">Privacy</a></li>
                     <li><a href="#">Terms</a></li>
-                    <li><a href="#">Refund policy</a></li>
                 </ul>
             </div>
             <div class="col-sm-2">
-                <h5>Partner</h5>
+                <h5>Partners</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#">Refer a friend</a></li>
-                    <li><a href="#">Affiliates</a></li>
+                    <li><a href="#">Listeners</a></li>
+                    <li><a href="#">Artists</a></li>
                 </ul>
             </div>
             <div class="col-sm-2">
                 <h5>Help</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Log in</a></li>
+                    <li><a href="mailto:markus@demu.app">Support</a></li>
                 </ul>
             </div>
         </div>
