changed pricing section

--- a/fans.html
+++ b/fans.html
@@ -189,7 +189,7 @@
                             <ul class="list-unstyled pricing-list">
                                 <li>Artist analytics and other tools</li>
                                 <li>more unannounced features</li>
-                                <li style="color:transparent">""</li>
+                                
                                 <li style="color:transparent">""</li>
 
                             </ul>
@@ -202,13 +202,7 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-md-8 col-12 divider top-divider mx-auto pt-5 text-center">
-                <h3>Try Knight free for 7 days</h3>
-                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in nisi commodo,
-                    tempus odio a, vestibulum nibh.</p>
-                <button class="btn btn-primary">
-                    Create your account
-                </button>
+            <div class="col-md-8 col-12 divider mx-auto pt-5 text-center">
             </div>
         </div>
     </div>
