Creator and little fans change

--- a/creators.html
+++ b/creators.html
@@ -52,7 +52,7 @@
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-                <h1 class="heading-black text-capitalize">Your music. Your way  </h1>
+                <h1 class="heading-black text-capitalize">Your music. Your way.</h1>
                 <p class="lead py-3">A decentralized music streaming platform that leverages the potential of blockchain technology to give artists and
                     and music lovers the best experience in the ecosystem.</p>
                 <!-- Begin Mailchimp Signup Form -->
@@ -62,7 +62,7 @@
                     <form action="https://hcfm.us5.list-manage.com/subscribe/post?u=634bf8d4b16b8e6e779f83e08&amp;id=6c5b70e22a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
                         <div id="mc_embed_signup_scroll">
                             <input style="padding: 20px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email-Address" required>
-                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center"></div>
+                            <div class="clear"><input type="submit" value="Join Beta" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center"></div>
                         </div>
                     </form>
                 </div>
@@ -86,25 +86,25 @@
                     <div class="col-md-6 box">
                         <div class="icon-box box-primary">
                             <div class="icon-box-inner">
-                                <span data-feather="edit-3" width="35" height="35"></span>
+                                <span data-feather="credit-card" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>You get your fair share</h5>
-                        <p class="text-muted">The listeners subscription fee is given directly to the artists based on their listening history.</p>
+                        <p class="text-muted">The listener's subscription fee is given directly to the artists based on their listening history.</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-success">
                             <div class="icon-box-inner">
-                                <span data-feather="monitor" width="35" height="35"></span>
+                                <span data-feather="pie-chart" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>Stay independent, using your own token</h5>
-                        <p class="text-muted">On DEMU, artists can raise money by creating their own "creator"-tokens. Use this to stay independent.</p>
+                        <p class="text-muted">At DEMU, artists can raise money by creating their own "creator"-tokens. Use this to stay independent.</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-danger">
                             <div class="icon-box-inner">
-                                <span data-feather="layout" width="35" height="35"></span>
+                                <span data-feather="codepen" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>Create & sell your own NFTs</h5>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                         <h5>Get discovered</h5>
-                        <p class="text-muted">On DEMU, small creators can build an audience through our discovery features. Getting discovered has never been easier.</p>
+                        <p class="text-muted">On DEMU, small creators can build an audience through our discovery feature. Getting discovered has never been easier.</p>
                     </div>
                 </div>
             </div>
@@ -129,14 +129,14 @@
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
                 <h2 class="heading-black">Free for creators. Forever.</h2>
-                <p class="text-muted lead">Demu will never charge artist to upload their own work on the platform.</p>
+                <p class="text-muted lead">Demu will never charge artists to upload their own work on the platform.</p>
             </div>
         </div>
     </div>
 </section>
 
 <!--footer-->
-<footer class="py-6">
+<footer class="py-6" style="margin-left: 10px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-5 mr-auto">
@@ -151,11 +151,12 @@
                     </li>
                 </ul>
             </div>
+            <!-- 
             <div class="col-sm-2">
                 <h5>Legal</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
                 </ul>
             </div>
             <div class="col-sm-2">
@@ -165,6 +166,7 @@
                     <li><a href="#">Artists</a></li>
                 </ul>
             </div>
+            -->
             <div class="col-sm-2">
                 <h5>Help</h5>
                 <ul class="list-unstyled">
