--- a/fans.html
+++ b/fans.html
@@ -209,14 +209,12 @@
 </section>
 
 <!--footer-->
-<footer class="py-6">
+<footer class="py-6" style="margin-left: 10px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-5 mr-auto">
-                <h5>About DEMU</h5>
-                <p class="text-muted">DEMU is a decentralized music streaming platform where the your subscription fee is distributed to artists based on your streaming history.
-                
-                </p>
+                <h5>About Demu</h5>
+                <p class="text-muted">Demu is a decentralized music streaming platform that is shifting power to the creators. Join the 1000s of artists and listeners using Demu.</p>
                 <ul class="list-inline social social-sm">
                     <li class="list-inline-item">
                         <a href="https://www.instagram.com/demu_app/"><i class="fa fa-instagram"></i></a>
