--- a/fans.html
+++ b/fans.html
@@ -42,12 +42,6 @@
                         <a class="nav-link page-scroll" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#faq">FAQ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="#">
                             <em data-feather="layout" width="18" height="18" class="mr-2"></em>
                             Try our app
@@ -64,7 +58,7 @@
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-                <h1 class="heading-black text-capitalize">The Music you Love, on your terms</h1>
+                <h1 class="heading-black text-capitalize">The Music you Love, on your terms.</h1>
                 <p class="lead py-3">Demu is the new music streaming platform that gives back to the artists.
                     By listening to music you directly help your favourite creators.</p>
                 <!-- Begin Mailchimp Signup Form -->
@@ -74,7 +68,7 @@
                     <form action="https://hcfm.us5.list-manage.com/subscribe/post?u=634bf8d4b16b8e6e779f83e08&amp;id=6c5b70e22a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
                         <div id="mc_embed_signup_scroll">
                             <input style="padding: 20px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email-Address" required>
-                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center"></div>
+                            <div class="clear"><input type="submit" value="join beta" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center"></div>
                         </div>
                     </form>
                 </div>
@@ -98,7 +92,7 @@
                     <div class="col-md-6 box">
                         <div class="icon-box box-primary">
                             <div class="icon-box-inner">
-                                <span data-feather="edit-3" width="35" height="35"></span>
+                                <span data-feather="credit-card" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>Your favourite creators get paid more</h5>
@@ -107,7 +101,7 @@
                     <div class="col-md-6 box">
                         <div class="icon-box box-success">
                             <div class="icon-box-inner">
-                                <span data-feather="monitor" width="35" height="35"></span>
+                                <span data-feather="pie-chart" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>Invest in artists by buying their tokens</h5>
@@ -116,7 +110,7 @@
                     <div class="col-md-6 box">
                         <div class="icon-box box-danger">
                             <div class="icon-box-inner">
-                                <span data-feather="layout" width="35" height="35"></span>
+                                <span data-feather="codepen" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>Buy Merchandise and NFTs directly from the artists</h5>
@@ -129,7 +123,7 @@
                             </div>
                         </div>
                         <h5>Finding new artists has never been simpler</h5>
-                        <p class="text-muted">Thanks to our discovery feature, you can find new artists that best represent your tastes</p>
+                        <p class="text-muted">Thanks to our discovery feature, you can find new artists that best represent your taste</p>
                     </div>
                 </div>
             </div>
@@ -173,7 +167,7 @@
                             <ul class="list-unstyled pricing-list">
                                 <li>Access to NFT-features</li>
                                 <li>Support for video and podcast hosting</li>
-                                <li>advanced discovery search</li>
+                                <li>Advanced discovery search</li>
 
                             </ul>
                             <a href="#" class="btn btn-info">
@@ -188,7 +182,7 @@
                             <div class="text-muted font-weight-medium mt-2">per month</div>
                             <ul class="list-unstyled pricing-list">
                                 <li>Artist analytics and other tools</li>
-                                <li>more unannounced features</li>
+                                <li>More unannounced features</li>
                                 
                                 <li style="color:transparent">""</li>
 
@@ -226,6 +220,7 @@
                     </li>
                 </ul>
             </div>
+            <!-- 
             <div class="col-sm-2">
                 <h5>Legal</h5>
                 <ul class="list-unstyled">
@@ -233,6 +228,8 @@
                     <li><a href="#">Terms</a></li>
                 </ul>
             </div>
+            -->
+            <!-- 
             <div class="col-sm-2">
                 <h5>Partners</h5>
                 <ul class="list-unstyled">
@@ -240,6 +237,7 @@
                     <li><a href="#">Artists</a></li>
                 </ul>
             </div>
+            -->
             <div class="col-sm-2">
                 <h5>Help</h5>
                 <ul class="list-unstyled">
