--- a/creators.html
+++ b/creators.html
@@ -65,13 +65,14 @@
                 <p class="lead py-3">A decentralized music streaming platform that leverages the potential of blockchain technology to give artists and
                     and music lovers the best experience in the ecosystem.</p>
                 <!-- Begin Mailchimp Signup Form -->
-                <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
                 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
                 <div id="mc_embed_signup">
-                    <form action="https://hcfm.us5.list-manage.com/subscribe/post?u=634bf8d4b16b8e6e779f83e08&amp;id=6c5b70e22a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
-                        <div id="mc_embed_signup_scroll">
-                            <input style="padding: 20px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email-Address" required>
-                            <div class="clear"><input type="submit" value="Join Beta" name="subscribe" onclick="subscribedForm()" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center"></div>
+                    <form onsubmit="subscribedForm()" action="https://us-central1-beta-signup-f3742.cloudfunctions.net/addEmail" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
+                        <div id="mc_embed_signup_scroll" style="align-items: center; justify-content: center;display: flex;">
+                            <input type="email" value="" name="email" style="padding: 8px;" id="mce-EMAIL" placeholder="Email-Address" required>
+                            <input type="text" name="userType" value="creator" hidden>
+                            <input type="submit" value="Join Beta" name="subscribe"  id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center">
                         </div>
                     </form>
                 </div>
