--- a/creators.html
+++ b/creators.html
@@ -70,7 +70,7 @@
                 <div id="mc_embed_signup">
                     <form onsubmit="subscribedForm()" action="https://us-central1-beta-signup-f3742.cloudfunctions.net/addEmail" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
                         <div id="mc_embed_signup_scroll" style="align-items: center; justify-content: center;display: flex;">
-                            <input type="email" value="" name="email" style="padding: 8px;" id="mce-EMAIL" placeholder="Email-Address" required>
+                            <input type="email" value="" name="email" style="padding: 8px;margin-right: 8px;border-radius: 5px;" id="mce-EMAIL" placeholder="Email-Address" required>
                             <input type="text" name="userType" value="creator" hidden>
                             <input type="submit" value="Join Beta" name="subscribe"  id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center">
                         </div>
