--- a/creators.html
+++ b/creators.html
@@ -13,7 +13,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Demu - Decentralized Music Streaming</title>
+    <title>Demu - Creators</title>
     <meta name="description"
           content="Decentralized music streaming network shifting power to artists."/>
 
