--- a/fans.html
+++ b/fans.html
@@ -13,9 +13,9 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Demu - Decentralized Music Streaming</title>
+    <title>Demu - Fans</title>
     <meta name="description"
-          content="Knight is a beautiful Bootstrap 4 template for product landing pages."/>
+          content="Decentralized music streaming network shifting power to artists."/>
 
     <!--Inter UI font-->
     <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
