--- a/creators.html
+++ b/creators.html
@@ -15,6 +15,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="/img/favicon.png" sizes="32x32">
     <title>Demu - Creators</title>
     <meta name="description"
           content="Decentralized music streaming network shifting power to artists."/>
