--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/img/favicon.png" sizes="32x32">
     <title>Demu - Decentralized Music Streaming</title>
     <meta name="description"
           content="Decentralized music streaming network shifting power to artists."/>
