Changed Design plus better for mobile

--- a/creators.html
+++ b/creators.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand heading-black" href="index.html">
-                DEMU
+                <img src="/img/logo_demu.png" style="width: 20%;">
             </a>
             <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
                     data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
