--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand heading-black" href="index.html">
-                DEMU
+                <img id="logo_image" src="/img/demu_logo_final.png" style="width: 10%;">
             </a>
         </nav>
     </div>
@@ -49,9 +49,9 @@
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center"> 
             <div class="circle-content" >
                 <div class="circle" id="circle">
-                    <div class="left"  id="left_circle" onmouseover="focusLeftItem()" onmouseout="unFocusLeftItem()" onclick="window.location.href='fans.html'"></div>
-                    <div class="right"  id="right_circle" onmouseover="focusRightItem()" onmouseout="unFocusRightItem()" onclick="window.location.href='creators.html'"></div>
-                    <div class="inner-circle" id="inner-circle">DEMU</div>
+                    <div class="left"  id="left_circle" onclick="window.location.href='fans.html'"></div>
+                    <div class="right"  id="right_circle" onclick="window.location.href='creators.html'"></div>
+                    <div class="inner-circle" id="inner-circle"><img src="/img/logo_demu.png" style="width: 50%; transform: translateX(6px);"></div>
                     <p id="left_text" class="left-text">FANS</p>
                     <p id="right_text" class="right-text">CREATORS</p>
                 </div>
