--- a/fans/index.html
+++ b/fans/index.html
@@ -86,6 +86,8 @@
                     </form>
                 </div>
                 <div id="referCode"></div>
+                <br>
+                <a href="https://discord.gg/gFRPs68Zxg" class="btn btn-primary d-inline-flex flex-row align-items-center" style="background-color: #7289DA; border-color: #7289DA; box-shadow: none;" target="_blank" >JOIN DISCORD</a>
             </div>
         </div>
     </div>
